--- a/labs/Lab_03_html_intro/Solution/index.html
+++ b/labs/Lab_03_html_intro/Solution/index.html
@@ -10,8 +10,9 @@
   </head>
   <body>
     <div>
-      <img src="music-dance.gif" alt="А зачем ты на это смотришь?" width="500" height="500">
-    <p style="font-size: 36px; font-family:segoe script;"> <a target="_blank" href="https://music.youtube.com/playlist?list=RDCLAK5uy_loGaNxpVmNaawt9htfXXYRYfm-D8xmHLY&playnext=1&si=t2jlEl94G16x2tyc">Плейлист</a> linkin park</p>
+      <img style="position: relative; left: 500px;" src="music-dance.gif" alt="А зачем ты на это смотришь?" width="500" height="500">
+      <img style="position: relative; left: -600px;" src="vinyl_PNG106.png" alt="А зачем ты на это смотришь?" width="500" height="500">
+    <p style="font-size: 36px; font-family:segoe script;">=====> <a target="_blank" href="https://music.youtube.com/playlist?list=RDCLAK5uy_loGaNxpVmNaawt9htfXXYRYfm-D8xmHLY&playnext=1&si=t2jlEl94G16x2tyc">Плейлист</a> linkin park</p>
     <p style="font-size: 36px; font-family:segoe script;">Альбом с музыкой выше по ссылке</p>
   </div>
   </body>
